--- a/frontend/pages/adventures/index.html
+++ b/frontend/pages/adventures/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -115,7 +114,8 @@
             filterFunction,
             saveFiltersToLocalStorage,
             getFiltersFromLocalStorage,
-            generateFilterPillsAndUpdateDOM
+            generateFilterPillsAndUpdateDOM,
+            removeByCategoryId
         } from "../../modules/adventures_page.js";
 
         // Declaring global variable adventure
@@ -155,6 +155,17 @@
             // TODO: MODULE_FILTERS
             // 1. Change the DOM to show the selected duration filter. Use the provided input event
             // 2. Invoke saveFiltersToLocalStorage here
+            document.getElementById("data").textContent = "";
+            
+
+            let duration = event.target.value;
+            document.getElementById("duration-select").selectedIndex = 0;
+
+            filters.duration=duration;
+            let filteredAdventures = filterFunction(adventures, filters);
+            saveFiltersToLocalStorage(filter)
+            addAdventureToDOM(filteredAdventures);
+
 
         }
 
@@ -163,6 +174,11 @@
             // TODO: MODULE_FILTERS
             // 1. Change the DOM to clear the Duration filter. Refer clearCategory() below
             // 2. Invoke saveFiltersToLocalStorage here
+            document.getElementById("data").textContent = "";
+            filters.duration = "";
+            let filteredAdventures = filterFunction(adventures, filters);
+            addAdventureToDOM(filteredAdventures);
+            saveFiltersToLocalStorage(filter)
 
         }
 
@@ -186,6 +202,7 @@
 
             // TODO: MODULE_FILTERS
             // 1. Invoke saveFiltersToLocalStorage here
+            saveFiltersToLocalStorage(filters);
         }
 
         //executed when clear button is clicked on category filter dropdown
@@ -199,6 +216,7 @@
 
             // TODO: MODULE_FILTERS
             // 1. Invoke saveFiltersToLocalStorage here
+            saveFiltersToLocalStorage(filter);
         }
 
         //helper function
@@ -211,6 +229,8 @@
         window.selectCategory = selectCategory;
         window.clearDuration = clearDuration;
         window.clearCategory = clearCategory;
+        window.removeByCategoryId=removeByCategoryId;
+        window.filter=filters;
     </script>
 </body>
 
