--- a/frontend/pages/adventures/detail/index.html
+++ b/frontend/pages/adventures/detail/index.html
@@ -42,8 +42,7 @@
                             <h1 id="adventure-name"></h1>
                             <p style="font-size: 20px; color: #999" id="adventure-subtitle"></p>
                         </div>
-                        <div class="row mb-3" id="photo-gallery">
-                        </div>
+                        <div class="row mb-3" id="photo-gallery"></div>
 
                         <hr />
                         <h5>About the Experience</h5>
